--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,7 +5,13 @@ jobs:
   test:
     name: cargo test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        rust: [beta, stable, nightly]
     steps:
       - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@stable
+      - uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: ${{matrix.rust}}
+          components: rust-src
       - run: cargo test --all-features
