--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -17,12 +17,12 @@ jobs:
         with:
           mdbook-version: "0.4.29"
           # mdbook-version: 'latest'
-      - run: mdbook build
+      - run: mdbook build docs
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.ref == 'refs/heads/trunk' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./book
+          publish_dir: ./docs/book
           user_name: "github-actions[bot]"
           user_email: "github-actions[bot]@users.noreply.github.com"
